--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,5 +62,6 @@ nav:
   - Document Loader:
     - Text Loader: 'document_loader/load_text.md'
     - Text and Image Loader: 'document_loader/load_text_image.md'
+    - Image Loader: 'document_loader/load_image.md'
 
 repo_url: https://github.com/soumik12345/medrag-multi-modal
