add: installation instructions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,9 @@ extra_javascript:
 
 nav:
   - Home: 'index.md'
+  - Setup:
+    - Installation: 'installation/install.md'
+    - Development: 'installation/development.md'
   - Document Loader:
     - Text Loader: 'document_loader/load_text.md'
     - Text and Image Loader: 'document_loader/load_text_image.md'
