--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "isort>=5.13.2",
     "black>=24.10.0",
     "ruff>=0.6.9",
+    "marker-pdf>=0.2.17",
     "mkdocs>=1.6.1",
     "mkdocstrings>=0.26.1",
     "mkdocstrings-python>=1.11.1",
@@ -34,6 +35,7 @@ dependencies = [
 core = [
     "Byaldi>=0.0.5",
     "firerequests>=0.0.7",
+    "marker-pdf>=0.2.17",
     "pdf2image>=1.17.0",
     "pdfplumber>=0.11.4",
     "python-dotenv>=1.0.1",
