--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "mkdocs-jupyter>=0.25.0",
     "jupyter>=1.1.1",
     "pdfplumber>=0.11.4",
+    "semchunk>=2.2.0",
+    "tiktoken>=0.8.0",
 ]
 
 [project.optional-dependencies]
@@ -41,6 +43,8 @@ core = [
     "PyPDF2>=3.0.1",
     "python-dotenv>=1.0.1",
     "pymupdf4llm>=0.0.17",
+    "semchunk>=2.2.0",
+    "tiktoken>=0.8.0",
     "torch>=2.4.1",
     "weave>=0.51.14",
 ]
