--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bm25s[full]>=0.2.2",
     "Byaldi>=0.0.5",
     "firerequests>=0.0.7",
+    "jax[cpu]>=0.4.34",
     "pdf2image>=1.17.0",
     "python-dotenv>=1.0.1",
     "pymupdf4llm>=0.0.17",
@@ -17,6 +18,7 @@ dependencies = [
     "uv>=0.4.20",
     "pytest>=8.3.3",
     "PyPDF2>=3.0.1",
+    "PyStemmer>=2.2.0.3",
     "isort>=5.13.2",
     "black>=24.10.0",
     "ruff>=0.6.9",
@@ -39,10 +41,12 @@ core = [
     "bm25s[full]>=0.2.2",
     "Byaldi>=0.0.5",
     "firerequests>=0.0.7",
+    "jax[cpu]>=0.4.34",
     "marker-pdf>=0.2.17",
     "pdf2image>=1.17.0",
     "pdfplumber>=0.11.4",
     "PyPDF2>=3.0.1",
+    "PyStemmer>=2.2.0.3",
     "python-dotenv>=1.0.1",
     "pymupdf4llm>=0.0.17",
     "semchunk>=2.2.0",
