add: docs for base img loader + pdf2image

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,7 +69,9 @@ nav:
       - PyPDF2: 'document_loader/text_loader/pypdf2_text_loader.md'
       - PDFPlumber: 'document_loader/text_loader/pdfplumber_text_loader.md'
       - Marker: 'document_loader/text_loader/marker_text_loader.md'
-    - Image Loader: 'document_loader/load_image.md'
+    - Image Loader:
+      - Base: 'document_loader/image_loader/base_img_loader.md'
+      - PDF2Image: 'document_loader/image_loader/pdf2image_img_loader.md'
   - Chunking: 'chunking.md'
   - Retrieval:
     - Multi-Modal Retrieval: 'retreival/multi_modal_retrieval.md'
