--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,7 +72,8 @@ nav:
     - Image Loader:
       - Base: 'document_loader/image_loader/base_img_loader.md'
       - PDF2Image: 'document_loader/image_loader/pdf2image_img_loader.md'
-      - Marker: 'document_loader/image_loader/marker_img_loader.md' 
+      - Marker: 'document_loader/image_loader/marker_img_loader.md'
+      - PDFPlumber: 'document_loader/image_loader/pdfplumber_img_loader.md'
   - Chunking: 'chunking.md'
   - Retrieval:
     - Multi-Modal Retrieval: 'retreival/multi_modal_retrieval.md'
