update: decouple Byaldi from pyproject.toml because of conflict with adapters and mentioned the same in relevant docs as well

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "adapters>=1.0.0",
     "bm25s[full]>=0.2.2",
-    "Byaldi>=0.0.5",
     "firerequests>=0.0.7",
     "jax[cpu]>=0.4.34",
     "pdf2image>=1.17.0",
@@ -38,8 +38,8 @@ dependencies = [
 
 [project.optional-dependencies]
 core = [
+    "adapters>=1.0.0",
     "bm25s[full]>=0.2.2",
-    "Byaldi>=0.0.5",
     "firerequests>=0.0.7",
     "jax[cpu]>=0.4.34",
     "marker-pdf>=0.2.17",
@@ -55,12 +55,8 @@ core = [
     "weave>=0.51.14",
 ]
 
-dev = [
-    "pytest>=8.3.3",
-    "isort>=5.13.2",
-    "black>=24.10.0",
-    "ruff>=0.6.9",
-]
+dev = ["pytest>=8.3.3", "isort>=5.13.2", "black>=24.10.0", "ruff>=0.6.9"]
+
 
 docs = [
     "mkdocs>=1.6.1",
