--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pytest>=8.3.3",
     "PyPDF2>=3.0.1",
     "PyStemmer>=2.2.0.3",
+    "safetensors>=0.4.5",
     "isort>=5.13.2",
     "black>=24.10.0",
     "ruff>=0.6.9",
@@ -49,6 +50,7 @@ core = [
     "PyStemmer>=2.2.0.3",
     "python-dotenv>=1.0.1",
     "pymupdf4llm>=0.0.17",
+    "safetensors>=0.4.5",
     "semchunk>=2.2.0",
     "tiktoken>=0.8.0",
     "torch>=2.4.1",
