--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,5 +81,6 @@ nav:
     - BM25-Sparse: 'retreival/bm25s.md'
     - ColPali: 'retreival/colpali.md'
     - Contriever: 'retreival/contriever.md'
+    - MedCPT: 'retreival/medcpt.md'
 
 repo_url: https://github.com/soumik12345/medrag-multi-modal
