add: NVEmbed2Retriever

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,5 +82,6 @@ nav:
     - ColPali: 'retreival/colpali.md'
     - Contriever: 'retreival/contriever.md'
     - MedCPT: 'retreival/medcpt.md'
+    - NV-Embed-v2: 'retreival/nv_embed_2.md'
 
 repo_url: https://github.com/soumik12345/medrag-multi-modal
