--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "mistralai>=1.1.0",
     "instructor>=1.6.3",
     "jsonlines>=4.0.0",
+    "opencv-python>=4.10.0.84",
 ]
 
 [project.optional-dependencies]
@@ -69,6 +70,7 @@ core = [
     "mistralai>=1.1.0",
     "instructor>=1.6.3",
     "jsonlines>=4.0.0",
+    "opencv-python>=4.10.0.84",
 ]
 
 dev = ["pytest>=8.3.3", "isort>=5.13.2", "black>=24.10.0", "ruff>=0.6.9"]
