--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,11 @@ docs = [
     "jupyter>=1.1.1",
 ]
 
+[project.scripts]
+medrag = "medrag_multi_modal.cli:main"
 
 [tool.pytest.ini_options]
 pythonpath = "."
+
+[tool.setuptools]
+py-modules = ["medrag_multi_modal"]
