--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,8 @@ medrag = "medrag_multi_modal.cli:main"
 
 [tool.pytest.ini_options]
 pythonpath = "."
+testpaths = ["tests"]
+filterwarnings = "ignore::DeprecationWarning"
 
 [tool.setuptools]
 py-modules = ["medrag_multi_modal"]
