--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,18 +14,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
   lint:
-    name: Check linting using ruff
+    name: check linting using ruff
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
   test-text-loader:
-    name: Test text loader
+    name: test text loader
     runs-on: ubuntu-latest
-    container: pytorch/pytorch
     steps:
       - uses: actions/checkout@v4
       - run: |
           pip install -U pip
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/text_loader.py
