--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          pip install -U pip
+          pip install -U uv pip
+          uv venv
+          source venv/bin/activate
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/text_loader.py
+          deactivate
