--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,7 +64,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          apt-get install -y poppler-utils
+          sudo apt-get install -y poppler-utils
           pip install -U uv pip
           uv venv
           source .venv/bin/activate
@@ -78,7 +78,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          apt-get install -y poppler-utils
+          sudo apt-get install -y poppler-utils
           pip install -U uv pip
           uv venv
           source .venv/bin/activate
@@ -92,7 +92,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          apt-get install -y poppler-utils
+          sudo apt-get install -y poppler-utils
           pip install -U uv pip
           uv venv
           source .venv/bin/activate
@@ -106,7 +106,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          apt-get install -y poppler-utils
+          sudo apt-get install -y poppler-utils
           pip install -U uv pip
           uv venv
           source .venv/bin/activate
