--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -114,3 +114,17 @@ jobs:
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/image_loader.py::test_pymupdf_img_loader
           deactivate
+  test-semantic-chunking:
+    name: test semantic chunking
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: |
+          sudo apt-get install -y poppler-utils
+          pip install -U uv pip
+          uv venv
+          source .venv/bin/activate
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
+          pip install -e ".[core, dev]"
+          pytest -s tests/semantic_chunking.py
+          deactivate
