--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -136,3 +136,17 @@ jobs:
           pip install -e ".[core, dev]"
           pytest -s tests/retrieval/bm25s.py
           deactivate
+  test-contriever-retrieval:
+    name: test retrieval (contriever)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: |
+          sudo apt-get install -y poppler-utils
+          pip install -U uv pip
+          uv venv
+          source .venv/bin/activate
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
+          pip install -e ".[core, dev]"
+          pytest -s tests/retrieval/contriever.py
+          deactivate
