--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "opencv-python>=4.10.0.84",
     "openai>=1.52.2",
     "streamlit>=1.39.0",
+    "llvmlite>=0.43.0",
 ]
 
 [project.optional-dependencies]
@@ -72,6 +73,7 @@ core = [
     "jsonlines>=4.0.0",
     "opencv-python>=4.10.0.84",
     "openai>=1.52.2",
+    "llvmlite>=0.43.0",
 ]
 dev = [
     "pytest>=8.3.3",
