--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "datasets>=3.1.0",
     "einops>=0.8.0",
     "firerequests>=0.0.7",
-    "jax[cpu]>=0.4.34",
     "pdf2image>=1.17.0",
     "python-dotenv>=1.0.1",
     "pymupdf4llm>=0.0.17",
@@ -42,7 +41,6 @@ dependencies = [
     "opencv-python>=4.10.0.84",
     "openai>=1.52.2",
     "streamlit>=1.39.0",
-    "llvmlite>=0.43.0",
 ]
 
 [project.optional-dependencies]
@@ -54,7 +52,6 @@ core = [
     "datasets>=3.1.0",
     "einops>=0.8.0",
     "firerequests>=0.0.7",
-    "jax[cpu]>=0.4.34",
     "marker-pdf>=0.2.17",
     "pdf2image>=1.17.0",
     "pdfplumber>=0.11.4",
@@ -73,7 +70,9 @@ core = [
     "jsonlines>=4.0.0",
     "opencv-python>=4.10.0.84",
     "openai>=1.52.2",
-    "llvmlite>=0.43.0",
+]
+jax = [
+    "jax[cpu]>=0.4.34",
 ]
 dev = [
     "pytest>=8.3.3",
