--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,39 +19,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/text_loader.py::test_pdfplumber_text_loader
-          deactivate
+          
   test-text-loader-pymupdf4llm:
     name: test text loader (pymupdf4llm)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - run: |
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/text_loader.py::test_pymupdf_text_loader
-          deactivate
+          
   test-text-loader-pypdf2:
     name: test text loader (pypdf2)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - run: |
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/text_loader.py::test_pypdf2_text_loader
-          deactivate
+          
   test-image-loader-fitzpil:
     name: test image loader (fitzpil)
     runs-on: ubuntu-latest
@@ -59,13 +53,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/image_loader.py::test_fitzpil_img_loader
-          deactivate
+          
   test-image-loader-pdf2image:
     name: test image loader (pdf2image)
     runs-on: ubuntu-latest
@@ -73,13 +65,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/image_loader.py::test_pdf2image_img_loader
-          deactivate
+          
   test-image-loader-pdfplumber:
     name: test image loader (pdfplumber)
     runs-on: ubuntu-latest
@@ -87,13 +77,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/image_loader.py::test_pdfplumber_img_loader
-          deactivate
+          
   test-image-loader-pymupdf:
     name: test image loader (pymupdf)
     runs-on: ubuntu-latest
@@ -101,13 +89,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/document_loader/image_loader.py::test_pymupdf_img_loader
-          deactivate
+          
   test-semantic-chunking:
     name: test semantic chunking
     runs-on: ubuntu-latest
@@ -115,13 +101,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/semantic_chunking.py
-          deactivate
+          
   test-bm25s-retrieval:
     name: test retrieval (bm25s)
     runs-on: ubuntu-latest
@@ -129,13 +113,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/retrieval/test_bm25s.py
-          deactivate
+          
   test-contriever-retrieval:
     name: test retrieval (contriever)
     runs-on: ubuntu-latest
@@ -143,13 +125,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/retrieval/test_contriever.py
-          deactivate
+          
   test-medcpt-retrieval:
     name: test retrieval (medcpt)
     runs-on: ubuntu-latest
@@ -157,13 +137,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           sudo apt-get install -y poppler-utils
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
+          pip install -U pip
           pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e ".[core, dev]"
           pytest -s tests/retrieval/test_medcpt.py
-          deactivate
+          
   test-llm-client:
     name: test llm client
     runs-on: ubuntu-latest
@@ -172,10 +150,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          pip install -U uv pip
-          uv venv
-          source .venv/bin/activate
-          uv pip install torch==2.4.1 --index-url https://download.pytorch.org/whl/cpu
-          uv pip install -e ".[core, dev]"
+          pip install -U pip
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
+          pip install -e ".[core, dev]"
           pytest -s tests/assistant/llm_client.py
-          deactivate
