--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "instructor>=1.6.3",
     "opencv-python>=4.10.0.84",
     "openai>=1.52.2",
+    "torch>=2.5.1",
 ]
 
 [project.optional-dependencies]
