--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/text_loader.py::test_pdfplumber_text_loader
           
   test-text-loader-pymupdf4llm:
@@ -31,8 +30,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/text_loader.py::test_pymupdf_text_loader
           
   test-text-loader-pypdf2:
@@ -42,8 +40,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/text_loader.py::test_pypdf2_text_loader
           
   test-image-loader-fitzpil:
@@ -54,8 +51,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/image_loader.py::test_fitzpil_img_loader
           
   test-image-loader-pdf2image:
@@ -66,8 +62,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/image_loader.py::test_pdf2image_img_loader
           
   test-image-loader-pdfplumber:
@@ -78,8 +73,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/image_loader.py::test_pdfplumber_img_loader
           
   test-image-loader-pymupdf:
@@ -90,8 +84,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/document_loader/image_loader.py::test_pymupdf_img_loader
           
   test-semantic-chunking:
@@ -102,8 +95,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/semantic_chunking.py
           
   test-bm25s-retrieval:
@@ -114,8 +106,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/retrieval/test_bm25s.py
           
   test-contriever-retrieval:
@@ -126,8 +117,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/retrieval/test_contriever.py
           
   test-medcpt-retrieval:
@@ -138,8 +128,7 @@ jobs:
       - run: |
           sudo apt-get install -y poppler-utils
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/retrieval/test_medcpt.py
           
   test-llm-client:
@@ -152,8 +141,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/assistant/test_llm_client.py
   
   test-medqa-assistant:
@@ -166,6 +154,5 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           pip install -U pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e ".[core, dev]"
+          pip install -e ".[dev]"
           pytest -s tests/assistant/test_medqa_assistant.py
