--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          sudo apt-get install -y poppler-utils
           pip install -U pip
           pip install -e ".[dev]"
           pytest -s tests/document_loader/text_loader.py::test_docling_text_loader
