--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "opencv-python>=4.10.0.84",
     "watchdog>=6.0.0",
     "jsonlines>=4.0.0",
+    "gdown>=5.2.0",
 ]
 
 [project.optional-dependencies]
